using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts.Enums
{
    internal class AnimationString
    {
        internal static string IsMoving = "IsMoving";
        internal static string IsCrouch = "IsCrouch";
        internal static string IsOnGround = "IsOnGround";
        internal static string YVelocity = "YVelocity";
        internal static string IsLanding = "IsLanding";
        internal static string JumpTrigger = "JumpTrigger";
        internal static string AttackTrigger = "AttackTrigger";
        internal static string CanMove = "CanMove";
        internal static string IsOnWall = "IsOnWall";
        internal static string IsOnCeiling = "IsOnCeiling";
        internal static string HasTarget = "HasTarget";
    }              
}
